# firesim

./: .gitignore  Cargo.toml  flake.nix  index.html  maskfile.md  todo.md  worker.js
.cargo/: config.toml
.github/workflows/: pages-publish.yml
front/: index.html  main.css  main.js  worker.js
js/: secure-context.js  testing.js
src/: gpu.rs  lib.rs  main.rs
src/rendering/: mod.rs  render.wgsl
src/sim/: gpucompute.rs  mod.rs  shader.wgsl
src/ui/: context.rs  engine.rs  mod.rs  primitives.rs
src/ui/components/: mod.rs
src/ui/text/: mod.rs  rasterization.rs
src/util/: mod.rs
