[package]
name = "firesim"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
arc-swap = "1.7.1"
fastrand = "2.3.0"
rayon = "1.11.0"
js-sys = "0.3.83"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageBitmap", "ImageData", "Window"] }
wasm-bindgen-rayon = { version = "1.3.0", features = ["no-bundler"] }
wasm-bindgen-futures = "0.4.56"
gloo-timers = { version = "0.3.0", features = ["futures"] }
console_error_panic_hook = "0.1.7"
wasm_thread = { version = "0.3.3" }
